modified divison tag fixed

--- a/interview.html
+++ b/interview.html
@@ -28,7 +28,7 @@
 
     <h3>题目一：</h3>
     <pre>
-    &lt;div class="classA classB">我是测试文字</div>
+    &lt;div class="classA classB">我是测试文字&lt;/div>
     &lt;style>
         .classB{color:green;}
         .classA{color:yellow;}
