modified name page

--- a/name.html
+++ b/name.html
@@ -43,8 +43,8 @@
 
     <h2>取名</h2>
     <ul class="name_list">
-        <li><span class="male">男孩</span> —— 韩远航</li>
-        <li><span class="female">女孩</span> —— 韩雅楠</li>
+        <li><span class="male">男孩</span> —— 韩宇鹏</li>
+        <li><span class="female">女孩</span> —— 韩艾琳</li>
     </ul>
     <div class="clearfix"></div>
     <div class="name_box">
@@ -52,6 +52,7 @@
         <ul>
             <h4>男</h4>
             <li>韩小峰(男)</li>
+            <li>韩远航(男)</li>
             <li>韩远鹏(男)</li>
             <li>韩志平(男)</li>
             <li>韩天翊(男)</li>
@@ -65,7 +66,7 @@
     <div class="name_box">
         <ul>
             <h4>女</h4>
-            <li>韩艾琳(女)</li>
+            <li>韩雅楠(女)</li>
             <li>韩东卉(女)</li>
             <li>韩瑞欣(女)</li>
             <li>韩梦洁(女)</li>
