add document.body scrollLeft and scrollTop values

--- a/event.html
+++ b/event.html
@@ -107,6 +107,9 @@
 
 
 
+
+
+
     var btn3 = document.getElementById("div3");
     EventObject.addHandler(btn3, "click", clickFn1);
 
@@ -116,6 +119,15 @@
         var clientY = event.clientY;
         var pageX = event.pageX;
         var pageY = event.pageY;
+
+        if(pageX === "undefined"){   /*判断是否IE8不支持*/
+            pageX = event.clientX + (document.body.scrollLeft || document.documentElement.scrollLeft);
+        }
+
+        if(pageY === "undefined"){  /*判断是否IE8不支持*/
+            pageY = event.clientY + (document.body.scrollTop || document.documentElement.scrollTop);
+        }
+        /*document.body为混杂模式， document.documentElement为标准模式*/
 
         alert("按钮在可视区的坐标位置是" + "(" + clientX + "," + clientY + ")");
         alert("按钮在页面的坐标位置是" + "(" + pageX + "," + pageY + ")");
