add phaser example bot animation page

--- a/list.html
+++ b/list.html
@@ -32,6 +32,7 @@
         <li><a href="/rubik.html">HTML5游戏——小魔方</a></li>
         <li><a href="/html5.html">HTML5测试页面</a></li>
         <li><a href="/drivepath.html">2014自驾游路线</a></li>
+        <li><a href="/animation.html">游戏人物动画</a></li>
         <li><a href="/name.html">2015年小BB降生取名</a></li>
     </ul>
 
