add interview question 3 notes

--- a/interview.html
+++ b/interview.html
@@ -61,6 +61,7 @@
     }
 
     var result = add1(9)(5)(2)(7);
+    <!-- var result2 = add1(add1(add1(add1(9))(5))(2))(7); -->
     alert(result)
     </pre>
     <p>请问以上代码执行后result的值是多少？</p>
