--- a/_posts/2014-09-25-javascript-function.html
+++ b/_posts/2014-09-25-javascript-function.html
@@ -6,15 +6,34 @@ title : Js之静态方法与实例方法的区别
 <h3>js之静态方法与实例方法的区别</h3>
 
 
+<h4>静态方法</h4>
 
-<p>静态方法是指不需要声明类的实例就可以使用的方法。</p>
+<p>静态方法是指不需要声明类的实例就可以使用的方法。由于Javascript中没有类的概念，所以这里看成函数对象的方法调用就行。</p>
+
+	{% highlight javascript %}
+function staticClass() { }      //声明一个类
+staticClass.staticMethod = function() { alert("我是静态方法！") };    // 创建一个静态方法
+	{% endhighlight %}
+
+<p>由于Javascript的函数式对象，函数名是指向该对象的指针，所以可以动态的为函数添加静态方法，并可以合法调用。</p>
+
+	{% highlight javascript %}
+staticClass.staticMethod();    // 我是静态方法！
+	{% endhighlight %}
+
+
+
+
+
+<h4>实例方法</h4>
 
 <p>实例方法是指必须要先使用"new"关键字声明一个类的实例, 然后才可以通过此实例访问的方法。</p>
 
 	{% highlight javascript %}
-function staticClass() { }; //声明一个类
-staticClass.staticMethod = function() { alert("static method") };            // 创建一个静态方法
-staticClass.prototype.instanceMethod = function() { alert("instance method") };     // 创建一个实例方法
+function staticClass() { };       //声明一个类
+staticClass.prototype.instanceMethod = function() { 
+	alert("instance method") 
+};       // 创建一个实例方法
 	{% endhighlight %}
 
 <p>上面首先声明了一个类staticClass, 接着为其添加了一个静态方法staticMethod 和一个动态方法instanceMethod。区别就在于添加动态方法要使用prototype原型属性。</p>
