modified name html

--- a/name.html
+++ b/name.html
@@ -43,7 +43,7 @@
 
     <h2>取名</h2>
     <ul class="name_list">
-        <li><span class="male">男孩</span> —— 韩宇鹏</li>
+        <li><span class="male">男孩</span> —— 韩远峰</li>
         <li><span class="female">女孩</span> —— 韩艾琳</li>
     </ul>
     <div class="clearfix"></div>
@@ -51,6 +51,7 @@
         备选：
         <ul>
             <h4>男</h4>
+            <li>韩宇鹏(男)</li>
             <li>韩小峰(男)</li>
             <li>韩远航(男)</li>
             <li>韩远鹏(男)</li>
