--- a/list.html
+++ b/list.html
@@ -27,13 +27,11 @@
     <ul class="map_list">
         <li><a href="/user.html">酷狗账号密码大全</a></li>
         <li><a href="/mac.html">Macbook键盘按键对比</a></li>
-        <li><a href="/resume.html">于彪斌的简历</a></li>
         <li><a href="/uc_interview.html">2014.10.08——广州UC面试题目</a></li>
         <li><a href="/rubik.html">HTML5游戏——小魔方</a></li>
         <li><a href="/html5.html">HTML5测试页面</a></li>
-        <li><a href="/drivepath.html">2014自驾游路线</a></li>
         <li><a href="/animation.html">游戏人物动画</a></li>
-        <li><a href="/name.html">2015年小BB降生取名</a></li>
+        <li><a href="/name.html">准备BB降生取名</a></li>
     </ul>
 
 
