--- a/list.html
+++ b/list.html
@@ -27,10 +27,12 @@
     <ul class="map_list">
         <li><a href="/user.html">酷狗账号密码大全</a></li>
         <li><a href="/mac.html">Macbook键盘按键对比</a></li>
+        <li><a href="/interview.html">网易三道经典JS面试题目</a></li>
         <li><a href="/uc_interview.html">2014.10.08——广州UC面试题目</a></li>
         <li><a href="/rubik.html">HTML5游戏——小魔方</a></li>
         <li><a href="/html5.html">HTML5测试页面</a></li>
         <li><a href="/animation.html">游戏人物动画</a></li>
+        <li><a href="/event.html">鼠标坐标视口、屏幕区别</a></li>
         <li><a href="/name.html">准备BB降生取名</a></li>
     </ul>
 
