add gulp command line interface

--- a/_posts/2014-11-10-gulp-tutorial.html
+++ b/_posts/2014-11-10-gulp-tutorial.html
@@ -41,7 +41,7 @@ sudo npm install --save-dev gulp
 
 <p>第六步：安装依赖</p>
 	{% highlight javascript %}
-npm install gulp-jshint gulp-sass gulp-concat gulp-uglify gulp-rename --save-dev 
+npm install gulp-jshint gulp-sass gulp-less gule-minify-css gulp-concat gulp-uglify gulp-rename --save-dev 
 	{% endhighlight %}
 
 
