--- a/_posts/2013-12-10-html-engine.html
+++ b/_posts/2013-12-10-html-engine.html
@@ -88,7 +88,12 @@ title : Html页面的性能优化以及缓存处理
 </p>
 
 
-
+<h4>还有一些经常会被忽略的需要注意的标签规范的地方</h4>
+<ul>
+	<li>每个&lt;img>标签都<strong>必须</strong>带有Alt属性;</li>
+	<li>每个&lt;a>标签都<strong>必须</strong>带有Title属性;</li>
+	<li>每个&lt;a>标签如果有外部链接都<strong>必须</strong>带有rel = "nofollow" 属性;</li>
+</ul>
 
 
 
