--- a/_posts/2014-11-12-gulp-tutorial.html
+++ b/_posts/2014-11-12-gulp-tutorial.html
@@ -5,7 +5,7 @@ title : 前端gulp使用教程
 
 
 <h3>gulp介绍</h3>
-<p>gulp官网的介绍：The streaming build system.大概意思就是任务流构建系统。顾名思义：就是一套帮助我们做基础的任务的一种工具。比如可以帮我自动编译less成css文件啦，自己检查javascript语法错误啦，自动合并js文件啦，打包压缩js文件啦等等之类的以前需要我们去手动或者通过工具实现的现在一次性帮我们自动构建好，只要我们在命令行输入一条命令，他就会自动帮我们完成，是不是感觉很酷啊，下面来跟我一起学习，体验一下吧。</p>
+<p><a href="http://gulpjs.com/" target="_blank">gulp官网</a>的介绍：The streaming build system.大概意思就是任务流构建系统。顾名思义：就是一套帮助我们做基础的任务的一种工具。比如可以帮我自动编译less成css文件啦，自己检查javascript语法错误啦，自动合并js文件啦，打包压缩js文件啦等等之类的以前需要我们去手动或者通过工具实现的现在一次性帮我们自动构建好，只要我们在命令行输入一条命令，他就会自动帮我们完成，是不是感觉很酷啊，下面来跟我一起学习，体验一下吧。</p>
 
 <p>最近开始学习gulp，下面是一些常用的设置</p>
 
