modified gulp tutorial blog

--- a/_posts/2014-11-12-gulp-tutorial.html
+++ b/_posts/2014-11-12-gulp-tutorial.html
@@ -5,9 +5,25 @@ title : 前端gulp使用教程
 
 
 <h3>gulp介绍</h3>
-<p><a href="http://gulpjs.com/" target="_blank">gulp官网</a>的介绍：The streaming build system.大概意思就是任务流构建系统。顾名思义：就是一套帮助我们做基础的任务的一种工具。比如可以帮我自动编译less成css文件啦，自己检查javascript语法错误啦，自动合并js文件啦，打包压缩js文件啦等等之类的以前需要我们去手动或者通过工具实现的现在一次性帮我们自动构建好，只要我们在命令行输入一条命令，他就会自动帮我们完成，是不是感觉很酷啊，下面来跟我一起学习，体验一下吧。</p>
+<p><a href="http://gulpjs.com/" target="_blank" rel="nofollow">gulp官网</a>的介绍：The streaming build system.大概意思就是任务流构建系统。顾名思义：就是一套帮助我们做基础的任务的一种工具。比如可以帮我自动编译less成css文件啦，自己检查javascript语法错误啦，自动合并js文件啦，打包压缩js文件啦等等之类的以前需要我们去手动或者通过工具实现的功能或任务，现在gulp可以一次性帮我们自动构建好，只要我们在命令行输入一条命令，他就会自动帮我们完成。</p>
 
-<p>最近开始学习gulp，下面是一些常用的设置</p>
+<p>对比大热的grunt前端构建工具，我觉得他又如下四点优势，就如官方所说的那样：</p>
+
+<ul>
+    <li>
+        Easy to use —— 易于配置和使用 （利用管道流配置，是复杂的任务管理简单化处理）
+    </li>
+    <li>
+        Efficient —— 执行高效 （利用管道流快速构建，不写中间文件到磁盘，所以速度更快）
+    </li>
+    <li>
+        High Quality —— 高质量 （严谨插件引导和检查机制，插件只专注于自己的功能快速实现）
+    </li>
+    <li>
+        Easy to Learn —— 易于学习（仅有5个API,用5个方法就能管理所有的任务流）
+    </li>
+</ul>
+
 
 
 
