add gulp tutorial blog notes

--- a/_posts/2014-11-12-gulp-tutorial.html
+++ b/_posts/2014-11-12-gulp-tutorial.html
@@ -29,19 +29,24 @@ title : 前端gulp使用教程
 
 <h3>gulp安装</h3>
 
+
+
 <h4>前提：安装node和npm</h4>
 
-<p>第一步：安装node</p>
+<p>第一步：安装node （Mac系统可以使用brew工具安装node，win系统可以去node官网下载安装）</p>
 	{% highlight javascript %}
 sudo brew install node  
 	{% endhighlight %}
 
-<p>第二步：安装npm</p>
+<p>第二步：安装npm （同上）</p>
 	{% highlight javascript %}
 sudo brew install npm  
 	{% endhighlight %}
 
 <p>安装完成输入命令: <br/><code>node -v</code>查看node版本号<br/><code>npm -v</code>	查看npm版本号</p>
+
+
+<h4>开始：使用npm安装gulp</h4>
 
 <p>第三步：全局安装gulp</p>
 	{% highlight javascript %}
@@ -60,7 +65,16 @@ sudo npm install --save-dev gulp
 
 <p>第六步：安装依赖</p>
 	{% highlight javascript %}
-npm install gulp-jshint gulp-sass gulp-less gule-minify-css gulp-concat gulp-uglify gulp-rename --save-dev 
+npm install gulp-jshint --save-dev 
+npm install gulp-jshint --save-dev 
+npm install gulp-jshint --save-dev 
+npm install gulp-jshint --save-dev 
+npm install gulp-jshint --save-dev 
+npm install gulp-jshint --save-dev 
+npm install gulp-jshint --save-dev 
+npm install gulp-jshint --save-dev 
+
+ gulp-sass gulp-less gule-minify-css gulp-concat gulp-uglify gulp-rename --save-dev 
 	{% endhighlight %}
 
 
