--- a/_posts/2014-11-12-gulp-tutorial.html
+++ b/_posts/2014-11-12-gulp-tutorial.html
@@ -61,9 +61,8 @@ sudo npm install -g gulp
 sudo npm install --save-dev gulp
 	{% endhighlight %}
 
-<p>第五步：新建gulpfile.js配置文件，处理任务流</p>
 
-<p>第六步：安装依赖，一条条命令安装需要的gulp插件到当前目录</p>
+<p>第五步：安装依赖，一条条命令安装需要的gulp插件到当前目录</p>
 	{% highlight javascript %}
 npm install gulp-jshint --save-dev 
 npm install gulp-sass --save-dev 
@@ -77,8 +76,15 @@ npm install gulp-rename --save-dev
 <p>也可以简化成一条命令：</p>
 
     {% highlight javascript %}
-npm install gulp-jshint gulp-sass gulp-less gule-minify-css gulp-concat gulp-uglify gulp-rename --save-dev 
+npm install gulp-jshint gulp-sass gulp-less gule-minify-css gulp-concat gulp-uglify gulp-rename --save-dev  
     {% endhighlight %}
+
+<p>上面的命令行将会安装我们所需要的所有插件并且将它么添加到package.json文件的devDependencies字段中。</p>
+
+
+<p>第六步：新建gulpfile.js配置文件，处理任务流</p>
+<p>现在所有的插件都可以使用了，我们可以开始编写我们的gulpfile文件并且指示gulp来执行这些任务了。</p>
+<p>tips：gulp仅仅只有5个方法。依次如下：task、src、run、watch以及dest。你只需要用这5个方法就可以编写所有的任务。</p>
 
 <h3>gulp配置文件</h3>
 
