add explain --save-dev means

--- a/_posts/2014-11-12-gulp-tutorial.html
+++ b/_posts/2014-11-12-gulp-tutorial.html
@@ -60,7 +60,7 @@ sudo npm install -g gulp
 	{% highlight javascript %}
 sudo npm install --save-dev gulp
 	{% endhighlight %}
-
+<p>这里使用了–save-dev标示符，它用来告诉npm将我们添加的依赖模块放入package.json文件的devDependencies字段中。</p>
 
 <p>第五步：安装依赖，一条条命令安装需要的gulp插件到当前目录</p>
 	{% highlight javascript %}
