add git delete tags command line

--- a/_posts/2014-07-18-git-command-line.html
+++ b/_posts/2014-07-18-git-command-line.html
@@ -185,6 +185,13 @@ title : Git 命令速查手册
 	$ git push --tags              //（发布本地所有的标记去远程本版库）
 	{% endhighlight %}
 
+	{% highlight java %}
+	$ git tag -d v0.1              //（删除本地标签）
+	{% endhighlight %}
+
+	{% highlight java %}
+	$ git push origin :refs/tags/v0.1    //（删除远程标签）
+	{% endhighlight %}
 
 
 
