--- a/list.html
+++ b/list.html
@@ -28,8 +28,8 @@
         <li><a href="/docs/user.html">酷狗账号密码大全</a></li>
         <li><a href="/docs/mac.html">Macbook键盘按键对比</a></li>
         <li><a href="/docs/interview.html">网易三道经典JS面试题目</a></li>
-        <li><a href="/uc_interview.html">2014.10.08——广州UC面试题目</a></li>
-        <li><a href="/rubik.html">HTML5游戏——小魔方</a></li>
+        <li><a href="/docs/uc_interview.html">2014.10.08——广州UC面试题目</a></li>
+        <li><a href="/docs/rubik.html">HTML5游戏——小魔方</a></li>
         <li><a href="/docs/html5.html">HTML5测试页面</a></li>
         <li><a href="/docs/animation.html">游戏人物动画</a></li>
         <li><a href="/docs/event.html">鼠标坐标视口、屏幕区别</a></li>
