change brew instead of homebrew

--- a/_posts/2014-11-13-gulp-tutorial.html
+++ b/_posts/2014-11-13-gulp-tutorial.html
@@ -33,7 +33,7 @@ title : 前端gulp使用教程
 
 <h4>前提：安装node和npm</h4>
 
-<p>第一步：安装node （Mac系统可以使用brew工具安装node，win系统可以去node官网下载安装）</p>
+<p>第一步：安装node （Mac系统可以使用homebrew工具安装node，win系统可以去node官网下载安装）</p>
 	{% highlight javascript %}
 sudo brew install node  
 	{% endhighlight %}
