modified gulp blog

--- a/_posts/2014-11-13-gulp-tutorial.html
+++ b/_posts/2014-11-13-gulp-tutorial.html
@@ -186,4 +186,4 @@ gulp.task('default', function(){
 
 <img src="/img/gulp_result.jpg" alt="">
 
-<p>可以看到执行完default任务耗时28毫秒，JS语法检查报了两个错误。由于对项目中less(或者css)文件夹和JS文件夹分别添加了处理任务，所以每当对这两个文件夹内文件进行改动的时候，就会触发相对应的任务流跑任务，并给出相应的提示。</p>
+<p>可以看到执行完default任务耗时28毫秒，JS语法检查报了两个错误。由于对项目中less(或者css)文件夹和JS文件夹分别添加了处理任务，所以每当对这两个文件夹内文件进行改动的时候，就会触发相对应的任务流执行任务处理，并给出相应的提示。</p>
