modified javascript feature blog

--- a/_posts/2012-09-24-javascript-feature.html
+++ b/_posts/2012-09-24-javascript-feature.html
@@ -179,6 +179,6 @@ alert( typeof new Number(1234)); // object
 
 <h3>Javascript的前景</h3>
 <p>Javascript目前是网页编程的唯一语言，只要互联网继续发展，它就必然一起发展。</p>
-<p>目前，许多新项目大大扩展了它的用途，node.js使得Javascript可以用于后端的服务器编程，coffeeScript使你可以用python和ruby的语法，撰写Javascript。</p>
+<p>目前，许多新项目大大扩展了它的用途，node.js使得Javascript可以用于后端的服务器编程，coffeeScript使你可以用python和ruby的语法，编写Javascript。</p>
 
 
