--- a/_posts/2014-10-24-javascript-currying.html
+++ b/_posts/2014-10-24-javascript-currying.html
@@ -6,7 +6,7 @@ title : 函数高阶性能——柯里化
 
 <h3>柯里化</h3>
 
-
+<p>维基百科的定义：在计算机科学中，柯里化（Currying）是把接受多个参数的函数变换成接受一个单一参数（最初函数的第一个参数）的函数，并且返回接受余下的参数而且返回结果的新函数的技术。</p>
 
 
 
