--- a/_posts/2014-10-24-javascript-currying.html
+++ b/_posts/2014-10-24-javascript-currying.html
@@ -26,7 +26,7 @@ alert(result2)  // 3*3+4*4 = 25
 	{% endhighlight %}
 
 
-<!-- 
+
 	{% highlight javascript %}
 
 function add(seed){
@@ -45,7 +45,7 @@ function add(seed){
 var result = add(5)(8)(9)(2)(1);
 alert(result);
 
-	{% endhighlight %} -->
+	{% endhighlight %} 
 
 
 
