add some new in nginx blog

--- a/_posts/2014-12-01-nginx-command.html
+++ b/_posts/2014-12-01-nginx-command.html
@@ -8,10 +8,25 @@ title : Nginx一些常用命令备查
 
 
 
+
 <p>开启Nginx服务</p>
 
 	{% highlight javascript %}
 	sudo nginx
+	{% endhighlight %}
+
+
+<p>查看Nginx版本信息</p>
+
+	{% highlight javascript %}
+	nginx -v
+	{% endhighlight %}
+	
+
+<p>查看Nginx一些信息</p>
+
+	{% highlight javascript %}
+	nginx -V
 	{% endhighlight %}
 
 
