add linux command explain meaasge

--- a/_posts/2014-12-01-nginx-command.html
+++ b/_posts/2014-12-01-nginx-command.html
@@ -35,8 +35,12 @@ title : Nginx一些常用命令备查
 	{% highlight javascript %}
 	ps -ef | grep nginx
 	{% endhighlight %}
-
-<p>注：grep是很强大的匹配命令，它能使用正则表达式搜索文本，并把匹配的行打印出来。其全称是 Global Regular Expression Print ，表示全局正则表达式版本</p>
+<p>注：ps命令是linux下最常用的也是非常强大的进程查看命令；</p>
+<ul>
+	<li>-e：显示所有进程；</li>
+	<li>-f：全格式显示（用ASCII字符显示树状结构）；</li>
+</ul>
+<p>grep是很强大的匹配命令，它能使用正则表达式搜索文本，并把匹配的行打印出来。其全称是 Global Regular Expression Print ，表示全局正则表达式版本。</p>
 
 <p>5.强制停止Nginx</p>
 
