modified git transfer protocol again

--- a/_posts/2014-06-28-git-alias-transfer-protocol.html
+++ b/_posts/2014-06-28-git-alias-transfer-protocol.html
@@ -19,7 +19,7 @@ title : Git 技巧和传输协议
 
 
 	{% highlight javascript %}
-	$ git config --global alias.cm commit      //将git commit 简化为git cm
+	$ git config --global alias.ci commit      //将git commit 简化为git ci
 	{% endhighlight %}
 
 
