modified function currying blog

--- a/_posts/2014-10-24-javascript-currying.html
+++ b/_posts/2014-10-24-javascript-currying.html
@@ -69,4 +69,4 @@ alert(result);
 	{% endhighlight %} 
 
 
-<p>一般的currying函数只有两重，执行情况如下，第一次执行参数不足返回内部函数，第二次执行才最终完成。</p>
+<p>一般的currying函数只有两重，执行情况如下，第一次执行参数不足返回内部函数，第二次执行才最终完成。然后循环执行完所有参数。</p>
