modified quicksort algorithm blog

--- a/_posts/2014-12-04-javascript-balanced-quicksort-algorithm.html
+++ b/_posts/2014-12-04-javascript-balanced-quicksort-algorithm.html
@@ -72,6 +72,8 @@ function quickSort(arr){
 
 <p>控制台如下: <img src="/img/quicksort.jpg" alt="快排算法性能"></p>
 
+<p>可以看出，由于在递归调用中不断地迭代数组计算，其性能有显著下降。</p>
+
 
 
 
