update my obj page

--- a/_posts/2015-06-30-javascript-index-object.html
+++ b/_posts/2015-06-30-javascript-index-object.html
@@ -38,7 +38,7 @@ var MyIndexObj = {
 
 
 
-	{% highlight javascript %}
+	{% highlight html %}
 	<script type="text/javascript">
 
 	MyIndexObj.init();
