add webapp page

--- a/_posts/2015-07-08-javascript-webapp-view.html
+++ b/_posts/2015-07-08-javascript-webapp-view.html
@@ -22,7 +22,7 @@ title : WebApp页面布局
 
 
 
-<p>
+<p class='list'>
 	第一个标签的意思：强制文档的宽度等于（移动）设备的宽度，初始话缩放比例为1，最大缩放比例为1，且不允许用户点击屏幕放大浏览<br/>
 	第二个标签的意思：此定义是iphone手机中safari私有属性，允许全屏浏览<br/>
 	第三个标签的意思：也是iphone私有标签，表示safari顶端状态条的样式是黑色<br/>
