--- a/_posts/2015-07-08-javascript-webapp-view.html
+++ b/_posts/2015-07-08-javascript-webapp-view.html
@@ -20,8 +20,6 @@ title : WebApp页面布局
 
 	{% endhighlight %}
 
-
-
 <p class='list'>
 	第一个标签的意思：强制文档的宽度等于（移动）设备的宽度，初始话缩放比例为1，最大缩放比例为1，且不允许用户点击屏幕放大浏览<br/>
 	第二个标签的意思：此定义是iphone手机中safari私有属性，允许全屏浏览<br/>
@@ -32,7 +30,11 @@ title : WebApp页面布局
 
 
 
+<p>2.html5标签</p>
 
+<p>
+	尽量选择语义化的html5标签多使用，比如使用article标签定义一个文章或段落，使用section定义一个内容块，使用nav标签定义一个导航。
+</p>
 
 
 
