add normal html5 head

--- a/_posts/2015-07-08-javascript-webapp-view.html
+++ b/_posts/2015-07-08-javascript-webapp-view.html
@@ -164,6 +164,26 @@ input{autocapitalize : off;}
 
 
 <h3>总结</h3>
+<p>所以常用的HTML头文件可以用这一份做模板。</p>
+
+	{% highlight html %}
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>标题</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="format-detection" content="telephone=no">
+<meta name="format-detection" content="email=no">
+<link rel="stylesheet" href="../../style.css"> 
+</head>
+	{% endhighlight %}
+
+
+
 
 
 
